deduplicate wire build
