# internal/server/internal/services/wisdom/api/http/v1/middleware.go
@@ -18,18 +18,6 @@ const (
 	cacheTTL  = 1 * time.Second
 )
 
-// proofOfWorkLimiter limits access to an endpoint using the Proof-of-Work mechanism.
-// @Description Middleware to protect endpoints with Proof-of-Work.
-// @Description Clients must solve a server-provided challenge and submit the solution in the header.
-// @Tags ProofOfWork
-// @Accept json
-// @Produce json
-// @Param X-Challenge header string false "Header containing the generated challenge (provided only on the first request)."
-// @Param X-Solution header string false "Header containing the solution to the challenge for validation (for subsequent requests)."
-// @Success 200 "Validation passed successfully."
-// @Failure 401 "Invalid challenge solution."
-// @Failure 500 "Failed to generate a challenge."
-// @Router /v1/ [get]
 func proofOfWorkLimiter(log logger.Logger, challengeUsecase usecases.Challenge) gin.HandlerFunc {
 	cache := expirable.NewLRU[string, []byte](cacheSize, nil, cacheTTL)
 
@@ -45,7 +33,7 @@ func proofOfWorkLimiter(log logger.Logger, challengeUsecase usecases.Challenge) 
 
 		base64Challenge := base64.StdEncoding.EncodeToString(challenge)
 		c.Header(constants.ChallengeHeader, base64Challenge)
-		c.AbortWithStatus(http.StatusOK)
+		c.AbortWithStatus(http.StatusBadRequest)
 	}
 
 	return func(c *gin.Context) {
